Adds fontawesome, replaces sprites as share buttons, makes clicking on sharing buttons open in new window without moving user away from site

--- a/twobuntu/templates/base.html
+++ b/twobuntu/templates/base.html
@@ -19,6 +19,7 @@
         {% block stylesheets %}
             <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
             <link href="{% static "css/global.css" %}" rel="stylesheet">
+            <link href="{% static "css/font-awesome.min.css" %}" rel="stylesheet">
         {% endblock %}
 
         {% block rss %}{% endblock %}
