--- a/twobuntu/articles/templates/articles/view.html
+++ b/twobuntu/articles/templates/articles/view.html
@@ -38,19 +38,23 @@
         </div>
         <div class="col-sm-4">
             <h4>Share This Article</h4>
-            <div>
+            <div id="share-buttons">
                 <a href="https://www.facebook.com/sharer.php?u={{ request.build_absolute_uri|urlencode }}"
-                   class="sprite sprite-social sprite-social-facebook"
-                   title="Share this article on Facbook"></a>
+                   title="Share this article on Facbook" target="_blank">
+                    <i class="fa fa-facebook-square fa-3x"></i>
+                </a>
                 <a href="https://plus.google.com/share?url={{ request.build_absolute_uri|urlencode }}"
-                   class="sprite sprite-social sprite-social-googlep"
-                   title="Share this article on Google+"></a>
+                   title="Share this article on Google+" target="_blank">
+                    <i class="fa fa-google-plus-square fa-3x"></i>
+                </a>
                 <a href="https://twitter.com/share?url={{ request.build_absolute_uri|urlencode }}"
-                   class="sprite sprite-social sprite-social-twitter"
-                   title="Share this article on Twitter"></a>
+                   title="Share this article on Twitter" target="_blank">
+                    <i class="fa fa-twitter-square fa-3x"></i>
+                </a>
                 <a href="http://www.linkedin.com/shareArticle?mini=true&url={{ request.build_absolute_uri|urlencode }}"
-                   class="sprite sprite-social sprite-social-linkedin"
-                   title="Share this article on LinkedIn"></a>
+                   title="Share this article on LinkedIn" target="_blank">
+                    <i class="fa fa-linkedin-square fa-3x"></i>
+                </a>
             </div>
         </div>
     </div>
