--- a/twobuntu/static/css/global.css
+++ b/twobuntu/static/css/global.css
@@ -46,6 +46,9 @@ div.footer { background-color: #ddd; padding: 32px 0; }
 .sprite-icon-info { background-position: -48px -32px; }
 .sprite-icon-warning { background-position: -96px -32px; }
 
+/* Social share buttons */
+#share-buttons a{ margin-right:4px; }
+
 /* Article styles. */
 div.featured { height: 200px; overflow: hidden; }
 
