Eradicates sprites, replaces fontawesome icons instead

--- a/twobuntu/articles/templates/articles/view.html
+++ b/twobuntu/articles/templates/articles/view.html
@@ -5,7 +5,7 @@
         <div class="col-sm-8">
             {% if not article.cc_license %}
                 <div class="alert alert-warning">
-                    <span class="sprite sprite-icon sprite-icon-warning"></span>
+                    <span class="fa fa-warning fa-4x pull-left"></span>
                     <p>
                         <strong>Important:</strong> this article is <em>not</em> released under a
                         Creative Commons license and may <em>not</em> be copied or redistributed in any form.
