--- a/twobuntu/news/templates/news/fragment.html
+++ b/twobuntu/news/templates/news/fragment.html
@@ -3,7 +3,7 @@
 <div class="panel panel-default">
     <div class="panel-heading">
         <h3 class="panel-title">
-            <a href="https://twitter.com/2buntunews" class="sprite sprite-twitter pull-right" title="Follow on Twitter"></a>
+            <a href="https://twitter.com/2buntunews" class="pull-right" title="Follow on Twitter"><i class="fa fa-twitter"></i></a>
             Latest News
         </h3>
     </div>
