--- a/twobuntu/templates/pages/index.html
+++ b/twobuntu/templates/pages/index.html
@@ -17,7 +17,7 @@
                     <input type="text" class="form-control" name="q" placeholder="Enter search terms...">
                     <span class="input-group-btn">
                         <button class="btn btn-default" type="submit">
-                            <span class="glyphicon glyphicon-search"></span>
+                            <span class="fa fa-search"></span>
                         </button>
                     </span>
                 </form>
@@ -26,7 +26,7 @@
             {% include "news/fragment.html" %}
             <div class="well">
                 <a href="{% url "rss" %}">
-                    <span class="sprite sprite-rss"></span>
+                    <span class="fa fa-rss"></span>
                     Latest Articles Feed
                 </a>
             </div>
