--- a/twobuntu/templates/form.html
+++ b/twobuntu/templates/form.html
@@ -34,7 +34,7 @@
                 {% endfor %}
                 <br>
                 <button type="submit" class="btn btn-primary">
-                    <span class="glyphicon glyphicon-ok"></span>
+                    <span class="fa fa-check"></span>
                     {{ action }}
                 </button>
                 <input type="reset" class="btn btn-default">
