--- a/twobuntu/articles/templates/articles/view.html
+++ b/twobuntu/articles/templates/articles/view.html
@@ -39,22 +39,11 @@
         <div class="col-sm-4">
             <h4>Share This Article</h4>
             <div id="share-buttons">
-                <a href="https://www.facebook.com/sharer.php?u={{ request.build_absolute_uri|urlencode }}"
-                   title="Share this article on Facbook" target="_blank">
-                    <i class="fa fa-facebook-square fa-3x"></i>
-                </a>
-                <a href="https://plus.google.com/share?url={{ request.build_absolute_uri|urlencode }}"
-                   title="Share this article on Google+" target="_blank">
-                    <i class="fa fa-google-plus-square fa-3x"></i>
-                </a>
-                <a href="https://twitter.com/share?url={{ request.build_absolute_uri|urlencode }}"
-                   title="Share this article on Twitter" target="_blank">
-                    <i class="fa fa-twitter-square fa-3x"></i>
-                </a>
-                <a href="http://www.linkedin.com/shareArticle?mini=true&url={{ request.build_absolute_uri|urlencode }}"
-                   title="Share this article on LinkedIn" target="_blank">
-                    <i class="fa fa-linkedin-square fa-3x"></i>
-                </a>
+                {% for site in social %}
+                    <a href="{{ site.0 }}{{ request.build_absolute_uri|urlencode }}"
+                       title="Share this article on {{ site.1 }}"
+                       target="_blank"><span class="fa {{ site.2 }} fa-3x"></span></a>
+                {% endfor %}
             </div>
         </div>
     </div>
