Minor adjustments to Font Awesome positioning.

--- a/twobuntu/static/css/global.css
+++ b/twobuntu/static/css/global.css
@@ -14,8 +14,9 @@ div.navbar { box-shadow: 0 0 8px black; margin-bottom: 0; }
 img { max-width: 100%; }
 p, li { text-align: justify; }
 
-/* fontawesome icons right margin */
-span.fa, i.fa { margin: 0 4px; }
+/* Space the Font Awesome icons away from text */
+div.alert span.fa { margin-top: 6px; }
+span.fa { margin: 0 4px; }
 
 /* Implement "missing" classes. */
 .fade-bottom { position: relative; }
