--- a/twobuntu/templates/form.html
+++ b/twobuntu/templates/form.html
@@ -4,7 +4,11 @@
 
 {% block content %}
     <h2>{{ title }}</h2>
-    <p>{{ description }}</p>
+    {% block description %}
+        <p>
+            {{ description|safe }}
+        </p>
+    {% endblock %}
     <br>
     <form method="post">
         {% csrf_token %}
