--- a/twobuntu/templates/footer.html
+++ b/twobuntu/templates/footer.html
@@ -1,14 +1,20 @@
+{% load static %}
+
 <div class="footer">
     <div class="container">
         <div class="row">
-            <div class="col-sm-4">
-                <p class="text-muted">
-                    Unless otherwise noted, all content is released under a
-                    <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> license.
-                </p>
+            <div class="col-sm-6">
+                <div class="media">
+                    <img src="{% static "img/cc-by-sa.png" %}" class="pull-left media-object">
+                    <div class="media-body">
+                        <p class="text-muted">
+                            Unless otherwise noted, all content is released under a
+                            <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> license.
+                        </p>
+                    </div>
+                </div>
             </div>
-            <div class="col-sm-4"></div>
-            <div class="col-sm-4">
+            <div class="col-sm-6">
                 <p class="text-muted text-right">
                     Copyright &copy; 2014 -
                     <a href="http://quickmediasolutions.com">Nathan Osman</a>
