--- a/twobuntu/templates/pages/about.html
+++ b/twobuntu/templates/pages/about.html
@@ -59,6 +59,17 @@
                     </p>
                 </li>
             </ul>
+            <h3>Content</h3>
+            <p>
+                The source code for our blogging engine as well as our Android app is located on our GitHub organization page &mdash;
+                <a href="https://github.com/2buntu">2buntu on GitHub</a>.
+            </p>
+            <p>
+                All content on this blog (unless otherwise noted) is released under a
+                <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> license.
+                If you are interested in reproducing an article that is <strong>not</strong> licensed
+                for reproduction, please use our contact form to get in touch with us.
+            </p>
         </div>
         <div class="col-sm-4">
             <div class="panel panel-default">
