--- a/twobuntu/templates/form.html
+++ b/twobuntu/templates/form.html
@@ -1,6 +1,4 @@
 {% extends "base.html" %}
-{% load static %}
-{% load widget_tweaks %}
 
 {% block content %}
     <h2>{{ title }}</h2>
@@ -18,23 +16,7 @@
                     <div class="alert alert-danger">{{ error }}</div>
                 {% endfor %}
                 {% for field in form %}
-                    {% if field|widget_type == "checkboxinput" %}
-                        <div class="checkbox">
-                            <label>
-                                {{ field }} {{ field.label }}
-                            </label>
-                        </div>
-                    {% else %}
-                        <div class="form-group">
-                            <label for="id_{{ field.name }}" class="control-label">
-                                {{ field.label }}
-                            </label>
-                            {% render_field field class+="form-control" placeholder=field.help_text %}
-                        </div>
-                    {% endif %}
-                    {% for error in field.errors %}
-                        <div class="alert alert-danger"><strong>{{ error }}</strong></div>
-                    {% endfor %}
+                    {% include "field.html" %}
                 {% endfor %}
                 <br>
                 <button type="submit" class="btn btn-primary">
