Clarified usage on non-CC licensed articles.

--- a/twobuntu/articles/templates/articles/view.html
+++ b/twobuntu/articles/templates/articles/view.html
@@ -9,7 +9,7 @@
                     <p>
                         <strong>Important:</strong> this article is <em>not</em> released under a
                         Creative Commons license and may <em>not</em> be copied or redistributed in any form.
-                        Please contact the author if you wish to reproduce its content.
+                        Please use our contact page to get in touch with us if you wish to reproduce the article.
                     </p>
                 </div>
             {% endif %}
