Added 'new article' link to the navbar dropdown.

--- a/twobuntu/templates/navbar.html
+++ b/twobuntu/templates/navbar.html
@@ -55,6 +55,12 @@
                                     My Profile
                                 </a>
                             </li>
+                            <li>
+                                <a href="{% url "articles:editor" %}">
+                                    <span class="fa fa-file"></span>
+                                    New Article
+                                </a>
+                            </li>
                             <li class="divider"></li>
                             <li>
                                 <a href="{% url "accounts:logout" %}">
