Added Markdown help page.

--- a/twobuntu/articles/templates/articles/editor.html
+++ b/twobuntu/articles/templates/articles/editor.html
@@ -23,7 +23,7 @@
                 <h4>Writing an Article</h4>
                 <p>
                     Articles for the 2buntu blog are written in Markdown.
-                    <a href="#">This page</a> presents an overview of Markdown syntax.
+                    <a href="{% url "articles:markdown" %}">This page</a> presents an overview of Markdown syntax.
                 </p>
                 <p>
                     When selecting a category, be as specific as possible.
