Added toolbox to the sidebar for articles that allows quick access to the editor.

--- a/twobuntu/articles/templates/articles/view.html
+++ b/twobuntu/articles/templates/articles/view.html
@@ -37,6 +37,25 @@
             <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus</a>.</noscript>
         </div>
         <div class="col-sm-4">
+            {% if can_edit %}
+                <div class="alert alert-warning">
+                    <h4>Toolbox</h4>
+                    <p>This toolbox provides you with buttons for making adjustments to this article.</p>
+                    <br>
+                    <p class="pull-right">
+                        <a href="{% url "articles:editor" %}?id={{ article.id }}" class="btn btn-xs btn-primary">
+                            <span class="fa fa-edit"></span>
+                            Edit Article
+                        </a>
+                        {% if user.is_staff and article.status == article.UNAPPROVED %}
+                            <a href="#" class="btn btn-xs btn-primary">
+                                <span class="fa fa-check"></span>
+                                Approve Article
+                            </a>
+                        {% endif %}
+                    </p>
+                </div>
+            {% endif %}
             <h4>Share This Article</h4>
             <div id="share-buttons">
                 {% for site in social %}
