--- a/twobuntu/articles/templates/articles/view.html
+++ b/twobuntu/articles/templates/articles/view.html
@@ -41,7 +41,7 @@
                 <div class="alert alert-warning">
                     <p>You have permission to edit this article.</p>
                     <br>
-                    <a href="{% url "articles:editor" %}?id={{ article.id }}" class="btn btn-sm btn-primary">
+                    <a href="{% url "articles:editor" article.id %}" class="btn btn-sm btn-primary">
                         <span class="fa fa-edit"></span>
                         Edit Article
                     </a>
@@ -52,7 +52,7 @@
                     <p>This article is ready for publishing but has not yet been approved by a staff member.</p>
                     {% if user.is_staff %}
                         <br>
-                        <a href="{% url "articles:publish" %}?id={{ article.id }}" class="btn btn-sm btn-primary">
+                        <a href="{% url "articles:publish" article.id %}" class="btn btn-sm btn-primary">
                             <span class="fa fa-check"></span>
                             Approve Article
                         </a>
