Implemented 'save' and 'save and continue' buttons in editor.

--- a/twobuntu/articles/templates/articles/editor.html
+++ b/twobuntu/articles/templates/articles/editor.html
@@ -40,11 +40,11 @@
     <div>
         <button type="submit" name="action" value="save" class="btn btn-primary">
             <span class="fa fa-check"></span>
-            {{ action }}
+            Save
         </button>
-        <button type="submit" name="action" value="preview" class="btn btn-default">
-            <span class="fa fa-search"></span>
-            Preview
+        <button type="submit" name="action" value="continue" class="btn btn-default">
+            <span class="fa fa-edit"></span>
+            Save and Continue Editing
         </button>
     </div>
 {% endblock %}
