Finished implementing basic article editor (closes #7).

--- a/twobuntu/articles/templates/articles/view.html
+++ b/twobuntu/articles/templates/articles/view.html
@@ -47,14 +47,24 @@
                     </a>
                 </div>
             {% endif %}
-            {% if article.status == article.UNAPPROVED %}
+            {% if not user.is_staff and article.status == article.DRAFT %}
                 <div class="alert alert-warning">
-                    <p>This article is ready for publishing but has not yet been approved by a staff member.</p>
+                    <p>Please click the button below when you are ready to submit your article for publishing.</p>
+                    <br>
+                    <a href="{% url "articles:submit" article.id %}" class="btn btn-sm btn-primary">
+                        <span class="fa fa-check"></span>
+                        Submit Article
+                    </a>
+                </div>
+            {% endif %}
+            {% if user.is_staff and not article.status == article.PUBLISHED or article.status == article.UNAPPROVED %}
+                <div class="alert alert-warning">
+                    <p>This article has not yet been approved by a staff member.</p>
                     {% if user.is_staff %}
                         <br>
                         <a href="{% url "articles:publish" article.id %}" class="btn btn-sm btn-primary">
                             <span class="fa fa-check"></span>
-                            Approve Article
+                            Publish Article
                         </a>
                     {% endif %}
                 </div>
