Adjusted article preview template to display status of article.

--- a/twobuntu/articles/templates/articles/preview.html
+++ b/twobuntu/articles/templates/articles/preview.html
@@ -1,7 +1,7 @@
 {% load gravatar %}
 
 <h4 class="truncate">
-    <a href="{{ article.get_absolute_url }}" title="{{ article.title }}">{{ article.title }}</a><br>
+    <a href="{{ article.get_absolute_url }}" title="{{ article.title }}">{{ article }}</a><br>
     <small>
         {{ article.date|timesince }} ago by
         <a href="{{ article.author.profile.get_absolute_url }}" title="{{ article.author.profile }}">
