Added guidelines page for contributing articles to the blog (closes #20).

--- a/twobuntu/templates/navbar.html
+++ b/twobuntu/templates/navbar.html
@@ -78,9 +78,9 @@
                         </a>
                     </li>
                     <li>
-                        <a href="{% url "accounts:register" %}">
-                            <span class="fa fa-plus"></span>
-                            Register
+                        <a href="{% url "join" %}">
+                            <span class="fa fa-plus-circle"></span>
+                            Join
                         </a>
                     </li>
                 {% endif %}
