--- a/twobuntu/templates/pages/join.html
+++ b/twobuntu/templates/pages/join.html
@@ -16,7 +16,7 @@
         carefully.
     </p>
     <div class="row">
-        <div class="col-lg-6">
+        <div class="col-sm-6">
             <div class="alert alert-warning">
                 <span class="fa fa-hand-o-right"></span>
                 All content must relate to the Ubuntu operating system in some way.
@@ -29,7 +29,7 @@
                 at least 60+ lines when rendered in the browser. We value quality over quantity.
             </div>
         </div>
-        <div class="col-lg-6">
+        <div class="col-sm-6">
             <div class="alert alert-warning">
                 <span class="fa fa-hand-o-right"></span>
                 Articles must be free from profanity, obscenity, and personal threats.
