--- a/twobuntu/templates/base.html
+++ b/twobuntu/templates/base.html
@@ -25,13 +25,13 @@
         {% block rss %}{% endblock %}
     </head>
     <body>
-        {% include "navbar.html" %}
+        {% block navbar %}{% include "navbar.html" %}{% endblock %}
         <div class="container content">
             {% include "breadcrumbs.html" %}
             {% include "messages.html" %}
             {% block content %}{% endblock %}
         </div>
-        {% include "footer.html" %}
+        {% block footer %}{% include "footer.html" %}{% endblock %}
 
         {% block scripts %}
             <script src="{% static "js/jquery.min.js" %}"></script>
