--- a/twobuntu/templates/form.html
+++ b/twobuntu/templates/form.html
@@ -10,7 +10,7 @@
             </div>
         </div>
     <br>
-    <form method="post">
+    <form method="post"{% if form.is_multipart %} enctype="multipart/form-data"{% endif %}>
         {% csrf_token %}
         {% block form_fields %}
             <div class="row">
