--- a/twobuntu/articles/templates/articles/editor.html
+++ b/twobuntu/articles/templates/articles/editor.html
@@ -31,6 +31,11 @@
                     please select "miscellaneous" and we will add an appropriate category.
                 </p>
             </div>
+            <div class="well">
+                <p>
+                    Click <a href="{% url "images:upload" %}">here</a> to upload an image.
+                </p>
+            </div>
         </div>
     </div>
 {% endblock %}
