Ensured that empty page title is not displayed in breadcrumbs.

--- a/twobuntu/templates/breadcrumbs.html
+++ b/twobuntu/templates/breadcrumbs.html
@@ -14,9 +14,11 @@
                 </a>
             </li>
         {% endif %}
-        <li class="active">
-            <span class="fa fa-file"></span>
-            {{ title }}
-        </li>
+        {% if title %}
+            <li class="active">
+                <span class="fa fa-file"></span>
+                {{ title }}
+            </li>
+        {% endif %}
     </ol>
 {% endif %}
