Added page detailing advertising options and linked to it with banner on home page (closes #9).

--- a/twobuntu/templates/pages/index.html
+++ b/twobuntu/templates/pages/index.html
@@ -31,7 +31,9 @@
                     Latest Articles Feed
                 </a>
             </div>
-            <img src="{% static "img/blank-ad.png" %}">
+            <a href="{% url "ads:index" %}">
+                <img src="{% static "img/blank-ad.png" %}">
+            </a>
             <br><br>
             {% include "categories/fragment.html" %}
         </div>
