--- a/twobuntu/static/css/global.css
+++ b/twobuntu/static/css/global.css
@@ -8,12 +8,14 @@ a:hover, a:focus { text-decoration: none; }
 a.navbar-brand { font-size: 18pt; }
 body { background-color: #f5f5f5; }
 div.alert { overflow: auto; }
+div.btn-group { margin: 0 0 4px 0; }
 div.jumbotron { padding: 16px; }
 div.jumbotron h1 { font-size: 24pt; }
 div.jumbotron p { font-size: 12pt; }
 div.navbar { box-shadow: 0 0 8px black; margin-bottom: 0; }
 img { max-width: 100%; }
 p, li { text-align: justify; }
+textarea.editor { font-family: monospace; }
 
 /* Space the Font Awesome icons away from text */
 div.alert span.fa { margin-top: 6px; }
